--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul>
-        <li id="logo">fashion</li>
+        <li id="logo">Fashion</li>
         <li>
           <a href="#container">HOME</a>
         </li>
@@ -141,15 +141,11 @@
               width="200px"></iframe></td>
           <td><iframe src="https://www.youtube.com/embed/AKK48UiL9Ak" frameborder="2px" height="300px"
               width="200px"></iframe></td>
-          <td><iframe src="https://www.youtube.com/embed/QFhsGS26-uo" frameborder="2px" height="300px"
-              width="200px"></iframe></td>
         </tr>
         <br>
         <br>
-
+        <br>
         <tr>
-          <td><iframe src="https://www.youtube.com/embed/OA2T1uphssE" frameborder="2px" height="300px"
-              width="200px"></iframe></td>
           <td><iframe src="https://www.youtube.com/embed/DglrE-2ie-A" frameborder="2px" height="300px"
               width="200px"></iframe></td>
           <td><iframe src="https://www.youtube.com/embed/FdVqFidFU8U" frameborder="2px" height="300px"
@@ -163,8 +159,6 @@
           <td><iframe src="https://www.youtube.com/embed/l5mqf30Owjc" frameborder="2px" height="300px"
               width="200px"></iframe></td>
           <td><iframe src="https://www.youtube.com/embed/FdVqFidFU8U" frameborder="2px" height="300px"
-              width="200px"></iframe></td>
-          <td><iframe src="https://www.youtube.com/embed/juscHPZdoxk" frameborder="2px" height="300px"
               width="200px"></iframe></td>
 
         </tr>
@@ -183,8 +177,8 @@
         <li> STEP 1-- Choose the product you want to <br>order from our website </li>
         <li> STEP 2-- copy the code of your product. </li>
         <li> STEP 3-- send the product code, and size <br>
-            on our whatsapp<a href="https://www.instagram.com/"><img src="images/whatsapp.jpeg" alt="whstsapp"
-              width="25px" height="25px"></a> or mail us.<a href="https://www.instagram.com/"><img src="images/mail.png"
+            on our whatsapp<a href="https://web.whatsapp.com/"><img src="images/whatsapp.jpeg" alt="whstsapp"
+              width="25px" height="25px"></a> or mail us.<a href="http://www.gmail.com/"><img src="images/mail.png"
               alt="mail" width="25px" height="25px"></a></li>
         <li> STEP 4-- we will send you the price <br>details of the product.</li>
         <li> STEP 5-- Fill your contact details and <br>Done we will send you confirmation</li>
@@ -248,13 +242,13 @@
       <li> <a href="https://www.instagram.com/"><img src="images/instagram.jpeg" alt="instagram" width="40px"
             height="40px"></a></li>
       <br>
-      <li> <a href="https://www.instagram.com/"><img src="images/whatsapp.jpeg" alt="whstsapp" width="40px"
+      <li> <a href="https://web.whatsapp.com/"><img src="images/whatsapp.jpeg" alt="whatsapp" width="40px"
             height="40px"></a></li>
       <br>
-      <li> <a href="https://www.instagram.com/"><img src="images/mail.png" alt="mail" width="40px" height="40px"></a>
+      <li> <a href="http://www.gmail.com/"><img src="images/mail.png" alt="mail" width="40px" height="40px"></a>
       </li>
       <br>
-      <li> <a href="https://www.instagram.com/"><img src="images/face.png" alt="facebook" width="40px"
+      <li> <a href="https://www.facebook.com/"><img src="images/face.png" alt="facebook" width="40px"
             height="40px"></a></li>
       <br>
       <li>
